[GSCOLLECT-1259] Implement ParallelIterable allSatisfy().
git-svn-id: svn+ssh://gscollections.svn.services.gs.com/svnroot/gscollections-svn/trunk@511 d5c9223b-1aff-41ac-aadd-f810b4a99ac4